2013-03-05  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (install): Fix case of Todo file.

2013-02-18  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* rebaseall.in: Remove duplicates from file list.
	Find DLLs installed via CPAN and similar systems and include them
	in the default file list.

2013-02-16  Corinna Vinschen  <corinna@vinschen.de>

	* peflags.c (main): Drop unused variable.
	(do_mark): Add unambiguous casts to arguments of printf statement.
	* rebase-db.c: Ditto, throughout.
	* rebase-dump.c: Ditto, throughout.
	* rebase.c: Ditto.
	(main): Fix computation of 32 bit Cygwin DLL dead zone.  Handle x86_64
	Cygwin as well.
	(rebase): Remove unused variable.
	* rebaseall.in: Take x86_64 Cygwin into account.

2013-01-16  Jason Tishler  <jason@tishler.net>

	Prepare for release 4.4.0.
	* configure.ac (AC_INIT): Bump version to 4.4.0.
	* rebase.c (version): Update copyright.

2012-06-14  Achim Gratz   <stromeko@nexgo.de>

	Prepare for release 4.3.0.
	* configure.ac (AC_INIT): Bump version to 4.3.0.
	* rebase.c (short_options): Add -O option.
	(long_options): Add --oblivious option.
	(image_oblivious_flag): Add new BOOL flag, false by default, set
	by -O.
	(main): Only report non-rebaseable DLL if they should have been
	rebased, i.e. cannot_rebase has the MSB cleared.
	(parse_args): Handle -O/--oblivious, set image_oblivious_flag
	accordingly.  Fall through to -s, since it is implied.
	(usage): Add text for -O/--oblivious.
	(load_image_info): Set MSB of cannot_rebase for all entries found
	in database to ensure that they are not actually touched.
	(merge_image_info): Warn if an oblivious file is found to be in
	the database already.  The file will not be rebased to keep the
	database in sync.
	(save_image_info): Return immediately if image_oblivious_flag is
	set.
	* rebase.db.h (_img_info): Extend cannot_rebase flag to two bit.
	If the MSB is set, the file is protected from rebasing due to
	--oblivious currently in effect.