@@ -1,5 +1,10 @@
 2013-03-05  Corinna Vinschen  <corinna@vinschen.de>
 
+	* Makefile.in: Fix imagebase rule for parallel make.
+	* rebase.c (rebase): Fix a cast to avoid compiler warning.
+
+2013-03-05  Corinna Vinschen  <corinna@vinschen.de>
+
 	* Makefile.in (install): Fix case of Todo file.
 
 2013-02-18  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
